--- a/front/src/assets/scss/_variables.scss
+++ b/front/src/assets/scss/_variables.scss
@@ -1,5 +1,8 @@
 $gutter: 2rem;
 
+// Small smartphones
+$screen-xs-min: 410px;
+
 // Small tablets and large smartphones (landscape view)
 $screen-sm-min: 576px;
 
@@ -11,6 +14,16 @@ $screen-lg-min: 992px;
 
 // Large tablets and desktops
 $screen-xl-min: 1200px;
+
+// 2K and higher screens
+$screen-xxl-min: 1800px;
+
+// Extra small devices
+@mixin xs {
+  @media (min-width: #{$screen-xs-min}) {
+    @content;
+  }
+}
 
 // Small devices
 @mixin sm {
@@ -36,6 +49,13 @@ $screen-xl-min: 1200px;
 // Extra large devices
 @mixin xl {
   @media (min-width: #{$screen-xl-min}) {
+    @content;
+  }
+}
+
+// Extra extra large devices
+@mixin xxl {
+  @media (min-width: #{$screen-xxl-min}) {
     @content;
   }
 }
