--- a/front/src/components/Layout/Layout.module.scss
+++ b/front/src/components/Layout/Layout.module.scss
@@ -1,26 +1,33 @@
-.Logo {
-  width: 50%;
-  max-width: 390px;
-  min-width: 220px;
-  // position: absolute;
-  padding-left: 0.5rem;
-}
-
 .Auth {
-  font-family: 'nunito sans', nunito;
+  display: grid;
+  grid-template-rows: fit-content(200px) auto fit-content(50px);
+  grid-template-areas: 'header' 'main' 'footer';
+  font-family: 'nunito sans', sans-serif;
   font-weight: 200;
   color: white;
   min-height: 100vh;
   margin: 0;
-  background-image: url(../../assets/images/backgroundlight.jpg);
+  background-image: url('../../assets/images/backgroundlight.jpg');
   background-repeat: no-repeat;
-  background-position: 78% 50%;
+  background-position: 48% 50%;
   background-size: cover;
+  background-attachment: fixed;
+  padding: 1rem;
+
+  &__Main {
+    grid-area: main;
+  }
+}
+
+.Logo {
+  grid-area: header;
+  width: 9rem;
+  z-index: 100;
 }
 
 .Footer {
+  padding: 1rem 1rem 0;
+  grid-area: footer;
   font-size: 0.8rem;
-  position: absolute;
-  bottom: 0.5rem;
-  right: 0.5rem;
+  text-align: center;
 }
