--- a/front/src/sections/TheTavern/Tavern/ScreenShare/ScreenShare.module.scss
+++ b/front/src/sections/TheTavern/Tavern/ScreenShare/ScreenShare.module.scss
@@ -1,6 +1,8 @@
 .ScreenContainer {
+  position: relative;
+  z-index: 5;
   width: 100%;
   min-width: 20rem;
-  max-width: 50rem;
-  border: 5px solid #985421;
+  max-width: 75rem;
+  min-height: 12rem;
 }
