css nv animation

--- a/front/src/assets/scss/index.scss
+++ b/front/src/assets/scss/index.scss
@@ -2,7 +2,7 @@
 @import './reset.scss';
 
 .active {
-  border-bottom: 2px solid #f2af0d;
+  border-bottom: 2px solid #fff200;
 }
 
 // @include lg {
