--- a/front/src/sections/TheTavern/components/Nav/Nav.module.scss
+++ b/front/src/sections/TheTavern/components/Nav/Nav.module.scss
@@ -24,27 +24,39 @@
   &__Logo {
     grid-area: header;
     width: $gutter * 3;
-  }
-  
-  &__Menu {
-    @include flex(center,center,row wrap);
-    position: absolute;
-    top: -1rem;
-    right: -1rem;
-    background-color: #5B3D20;
-    border-radius: 50%;
-    height: 6rem;
-    width: 6rem;
-    transition: 300ms ease-in-out;
 
-    &__Open {
-      @extend .Nav__Menu;
-      transform: scale(1.1);
+    img {
+      width: 55%;
     }
   }
   
-  img {
-    width: 55%;
+  &__Menu {
+    &__Container {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+
+    @include flex(center,center,row wrap);
+    position: absolute;
+    top: -1.1rem;
+    right: -1.1rem;
+    background-color: #5B3D20;
+    border: solid 3px  #0B0501;
+    border-radius: 50%;
+    height: 6.1rem;
+    width: 6.1rem;
+    transition: 300ms ease-in-out;
+    z-index: 10;
+
+    &__Open {
+      @extend .Nav__Menu;
+      transform: scale(1.05);
+    }
+    
+    img {
+      width: 56%;
+    }
+    
   }
-;
 }
