--- a/front/src/sections/TheTavern/components/Nav/NavLinks/NavLinks.module.scss
+++ b/front/src/sections/TheTavern/components/Nav/NavLinks/NavLinks.module.scss
@@ -1,3 +1,40 @@
+@import '../../../../../assets/scss/variables';
+
 .NavLinks {
-  margin-right: 4rem;
-}
+  @include flex(center, center, row nowrap);
+  position: absolute;
+  background-color: #5B3D20;
+  border-radius: 5px;
+  top: 0.5rem;
+  right: $gutter * 2.3;
+  transform: translate(100%);
+  // transition: all 750ms cubic-bezier(.75,-1.52,.04,1.95);
+  // transition: all 750ms cubic-bezier(1,.14,.23,1.44);
+  transition: all 750ms cubic-bezier(.46,.59,.36,1.27);
+  
+  &__Open {
+    transform: translate(0); 
+    // transition: all 750ms cubic-bezier(.75,-1.52,.04,1.95);
+    // transition: all 750ms cubic-bezier(1,-1.56,.12,1.6);
+    transition: all 750ms cubic-bezier(.46,.59,.36,1.27);
+  }
+  
+  li { 
+    padding: $gutter/2 $gutter/3;
+    border-right: solid 2.5px #000;
+
+    &:last-child {
+      padding: 0 $gutter/2.5;
+      border: none;
+    }
+  }
+  
+
+  &__Deconnexion {
+      border: none;
+  
+      img {
+        width: 1.5rem;
+      }
+    }
+};
