--- a/front/src/sections/TheTavern/Thread/Thread.module.scss
+++ b/front/src/sections/TheTavern/Thread/Thread.module.scss
@@ -1,6 +1,6 @@
 .Thread {
     background-color: #0B0501;
-    height:90vh;
+    height:100%;
 }
 
 .Drawer{
@@ -16,12 +16,12 @@
 
 .SelfAvatar{
     width: 7%;
-    margin: 0.5rem 1rem;
+    margin: 0.3rem 1rem;
 }
 
 .Triangle{
     // display : inline-block;
-    margin: 1.2rem 2rem;
+    margin: 0.7rem 2rem;
     height : 0;
     width : 0;
     border-right : 0.7rem solid transparent;
