--- a/front/src/sections/TheTavern/Thread/Posts/Post/Post.module.scss
+++ b/front/src/sections/TheTavern/Thread/Posts/Post/Post.module.scss
@@ -1,88 +1,63 @@
 // @import '../../../../../assets/scss/variables'
 
 .Post {
-    background-color:#3A271D;
-    display: flex;
-    flex-direction: column;
-    margin:1rem auto;
-    width: 90%;
-    
+  background-color: #3a271d;
+  display: flex;
+  flex-direction: column;
+  margin: 1rem auto;
+  width: 90%;
+  font-family: 'nunito sans', sans-serif;
+
+  button {
+    font-family: 'nunito sans', sans-serif;
+  }
 }
 
 .AuthorPost {
+  color: #fff;
+  text-align: right;
+  margin-right: 0.5rem;
+  padding: 0.3rem;
 
-    color: #fff;
-    
+  &_gold {
+    color: #fff200;
     text-align: right;
     margin-right: 0.5rem;
-    font-family: 'nunito sans', nunito;
-    padding:0.3rem;
-
-    &_gold{
-        color: #fff200;
-        text-align: right;
-        font-family: 'nunito sans', nunito;
-        margin-right: 0.5rem;
-        padding:0.3rem;
-
-    }
-    
-
+    padding: 0.3rem;
+  }
 }
-
-
 
 .ContentPost {
-
-    background-color: #0B0501;
-    border-radius: 5px;
-    color: #fff;
-    width: 95%;
-    height: fit-content;
-    margin: 0 auto;
-    padding: 1rem;
-    font-family: 'nunito sans', nunito;
-    word-wrap: break-word;
-    
-    
-    
+  background-color: #0b0501;
+  border-radius: 5px;
+  color: #fff;
+  width: 95%;
+  height: fit-content;
+  margin: 0 auto;
+  padding: 1rem;
+  word-wrap: break-word;
 }
 
-.PostFooter{
-
-    &_start{
-        color: #fff;
-        padding: 0.4rem;
-        font-size: 0.8em;
-        display: flex;
-        justify-content:flex-start;
-        border: 1px solid rgba(242, 173, 0, 0.603);
-        width:95%;
-        margin: 0.3rem auto;
-    }
-
-    &_between{
-        color: #fff;
-        padding: 0.4rem;
-        font-size: 0.8em;
-        display: flex;
-        justify-content:space-between;
-        border: 1px solid rgba(242, 173, 0, 0.603);
-        width:95%;
-        margin: 0.3rem auto;
-    }
+.PostFooter {
+  color: #fff;
+  padding: 0.4rem;
+  font-size: 0.8em;
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid rgba(242, 173, 0, 0.603);
+  width: 95%;
+  margin: 0.3rem auto;
 }
-.DeleteButton{
-    width: 4rem;
-    height: 1rem;
-    font-size: 0.7em;
+.DeleteButton {
+  width: 4rem;
+  height: 1rem;
+  font-size: 0.7em;
 }
 
-.DateContainer{
-    display: flex;
-    justify-content: space-between;
-    width: 35%;
-    // padding: 0 0.rem;
+.DateContainer {
+  display: flex;
+
+  div:first-child {
+    margin-right: 0.5rem;
+  }
 }
-
-
