--- a/front/src/sections/TheTavern/Thread/Thread.module.scss
+++ b/front/src/sections/TheTavern/Thread/Thread.module.scss
@@ -1,30 +1,28 @@
 .Thread {
-    background-color: #0B0501;
-    height:100%;
+  background-color: #0b0501;
+  height: 100%;
 }
 
-.Drawer{
-    background-color: #553719;
-    position: fixed;
-    bottom: 0px;
-    left: 2.5%;
-    width: 95%;
-    display: flex;
-    justify-content: space-between;
-    
+.Drawer {
+  background-color: #553719;
+  position: fixed;
+  bottom: 0px;
+  left: 2.5%;
+  width: 95%;
+  display: flex;
+  justify-content: space-between;
 }
 
-.SelfAvatar{
-    width: 7%;
-    margin: 0.3rem 1rem;
+.SelfAvatar {
+  width: 7%;
+  margin: 0.3rem 1rem;
 }
 
-.Triangle{
-    // display : inline-block;
-    margin: 0.7rem 2rem;
-    height : 0;
-    width : 0;
-    border-right : 0.7rem solid transparent;
-    border-bottom : 1.25rem solid #fff200;
-    border-left : 0.7rem solid transparent;
+.Triangle {
+  margin: 0.7rem 2rem;
+  height: 0;
+  width: 0;
+  border-right: 0.7rem solid transparent;
+  border-bottom: 1.25rem solid #fff200;
+  border-left: 0.7rem solid transparent;
 }
