advance the css of thread page

--- a/front/src/sections/TheTavern/Thread/Posts/Post/Post.module.scss
+++ b/front/src/sections/TheTavern/Thread/Posts/Post/Post.module.scss
@@ -22,7 +22,7 @@
 
 .Gutter {
     width: 90%;
-    border-radius: 15%;
+    border-radius: 5px 5px 0 0;
     background-color: #3A271D;
     height: 0.3rem;
     margin: 1rem auto 0.15rem;
