--- a/front/src/sections/TheTavern/UserAccount/UserAccount.module.scss
+++ b/front/src/sections/TheTavern/UserAccount/UserAccount.module.scss
@@ -1,14 +1,108 @@
 .UserAccount {
   background-color: #553719;
+  width:80%;
+  margin: auto;
+  padding:0.5rem;
+  border-radius: 5px;
+
+  &__DeleteBtn {
+    border :none;
+    border : 1px solid yellow;
+    background-color: #D92626;
+    color: #fff;
+
+
+  }
 
   &__Description {
+    background-color: #fff;
+    height:15vh;
+    color: #000;
+    font-family:  'nunito sans', nunito;
+    font-weight: 500;
+    margin: 0.3rem 0 0.5rem 0;
+    
+
+    &_Text{
+      height : 85%;
+      word-wrap: break-word;
+      padding: 0.5rem;
+      
+
+    }
+    
+    
+    
+
+
     
   }
+ 
+
   
   &__Avatar {
     width: 5rem;
     height: 5rem;
     border-radius: 50%;
     border: 2px solid black;
+  }
+}
+
+.Username_Container {
+}
+
+.Username{
+  background-color: #fff;
+  color: #000;
+  padding:0.5rem;
+  font-family:  'nunito sans', nunito;
+  width : 80%;
+  border-radius:3px;
+  text-align: right;
+  font-weight : 500;
+  &_Container{
+    
+    display: flex;
+    justify-content : space-between;
+    align-items: center;
+  }
+  
+
+}
+
+.ContactList{
+  background-color : #3A271D;
+  border-radius:5px;
+  font-family:  'nunito sans', nunito;
+  padding:0.5rem;
+
+
+  &_Title{
+    color:#fff;
+    font-weight : 500;
+
+  }
+
+  &_Content{
+    
+    font-weight : bold;
+    color:#1DFFD6;
+    &_Container{
+      background-color: #553719;
+      margin: 0.5rem 0.3rem;
+      border-radius:5px;
+      padding: 0.6rem 0.3rem;
+      display: flex;
+      justify-content: space-between;
+
+    }
+
+  }
+
+  &_Btn{
+    background-color: #D92626 ;
+    border:none;
+    color: #fff;
+
   }
 }
