--- a/front/src/sections/Auth/Home/Home.module.scss
+++ b/front/src/sections/Auth/Home/Home.module.scss
@@ -6,8 +6,8 @@
   font-size: 5rem;
 
   &__Container {
-    font-family: 'Josefin Sans', sans-serif;
     @include flex(center, center, row-reverse wrap);
+    font-family: 'Josefin Sans', sans-serif;
     position: fixed;
     right: -11.6rem;
     bottom: 38%;
@@ -18,6 +18,7 @@
       display: inline-block;
       top: 93%;
       right: 20.4rem;
+      left: 44.5%;
       transform: rotateZ(0deg);
       display: flex;
       flex-flow: row-reverse;
@@ -34,6 +35,9 @@
   transform: rotate(90deg);
   left: 0.6rem;
   position: relative;
+  @include xl {
+    position: absolute;
+  }
 
   ~ div {
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
@@ -44,4 +48,5 @@
     left: 0.1rem;
     transform: rotate(90deg);
   }
+
 }
