--- a/front/src/sections/Auth/Signup/Signup.module.scss
+++ b/front/src/sections/Auth/Signup/Signup.module.scss
@@ -56,6 +56,16 @@
   padding: $gutter;
   margin-top: $gutter + 1rem;
 
+  @include xl {
+    position: absolute;
+    max-width: 25rem;
+    max-height: 500px;
+    right: 20%;
+    bottom: 7%;
+    left: 60%;
+    top: 17%;
+  }
+
   &__Container {
     @include flex(center, center, column nowrap);
     max-width: 20rem;
