--- a/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
+++ b/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
@@ -13,6 +13,7 @@
   transform: translate(0, calc(100% - 42px));
   border-radius: 5% 5% 0 0;
   transition: all 500ms ease-in;
+  z-index: 50;
 
   &__Open {
     @extend .PostForm;
