--- a/front/src/sections/Auth/Home/Presentation/Presentation.module.scss
+++ b/front/src/sections/Auth/Home/Presentation/Presentation.module.scss
@@ -3,6 +3,7 @@
 .Presentation {
   font-family: 'nunito sans', nunito;
   position: relative;
+  z-index: 100;
   font-size: 0.95rem;
   font-weight: 200;
   height: 21rem;
