--- a/front/src/sections/Auth/Signin/Signin.module.scss
+++ b/front/src/sections/Auth/Signin/Signin.module.scss
@@ -2,6 +2,7 @@
 
 .Signin {
   position: relative;
+  z-index: 100;
   background-color: rgba(#3a271d, 0.7);
   clip-path: polygon(
     0% 0%,
@@ -123,7 +124,7 @@
     text-decoration: underline;
   }
 
-}
+}ß
 .Presentation {
   display: none;
 
