--- a/front/src/assets/scss/_variables.scss
+++ b/front/src/assets/scss/_variables.scss
@@ -2,7 +2,7 @@ $gutter: 2rem;
 $gold: #fff200;
 
 // Small smartphones
-$screen-xs-min: 410px;
+$screen-xs-min: ß;
 
 // Small tablets and large smartphones (landscape view)
 $screen-sm-min: 576px;
