--- a/front/src/sections/TheTavern/Thread/Thread.module.scss
+++ b/front/src/sections/TheTavern/Thread/Thread.module.scss
@@ -1,6 +1,21 @@
+@import '../../../assets/scss/variables';
+
+
 .Thread {
   background-color: #0b0501;
   height: 100%;
+  max-width: 100vw;
+  @include xl{
+    // position: absolute;
+    // left: 20%;
+    margin-left: 24.5%;
+    width: 98%;
+    margin-top: 10%;
+    height: auto;
+    position: relative;
+    z-index: 1;
+    display: flex;
+  }
 }
 
 .Invitation {
