--- a/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
+++ b/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
@@ -12,34 +12,85 @@
   background-color: #553719;
   transform: translate(0, calc(100% - 42px));
   border-radius: 5% 5% 0 0;
-  transition: all 500ms ease-in;
+  transition: all 300ms ease-in;
+  @include xl{
+    top: 1rem;
+    position: relative;
+    transform: none;
+    background-color: initial;
+  }
+
+
 
   &__Open {
     @extend .PostForm;
     transform: translate(0, 0%);
-    transition: all 500ms ease-in;
+    transition: all 300ms ease-in;
   }
 
   &__Main {
     @include flex(stretch, space-around, column nowrap);
     grid-area: main;
     overflow: auto;
+    @include xl {
+      align-items: initial;
+      justify-content: initial;
+    }
   }
 
   &__Invitation {
     overflow: auto;
     height: 45%;
+
+    @include xl{
+      height: 7%;
+      margin-top: 3%;
+      scroll-behavior: smooth;
+      scrollbar-width: thin;
+      scrollbar-color: #888 #ccc;
+    }
+  }
+
+  &__Invitation::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 10px;
+    height: 10px;
+  }
+  &__Invitation::-webkit-scrollbar-track {
+    background: #ccc;
+    border-radius: 0px;
+  }
+  &__Invitation::-webkit-scrollbar-thumb {
+    cursor: pointer;
+    border-radius: 5px;
+    background: #888;
+    -webkit-transition: color 0.2s ease;
+    transition: color 0.2s ease;
+  }
+  &__Invitation::-webkit-scrollbar-thumb:window-inactive {
+    background: rgba(0, 0, 0, 0.25);
+  }
+  &__Invitation::-webkit-scrollbar-thumb:hover {
+    background: rgb(100, 100, 100);
   }
 
   &__Footer {
-    padding: 1rem;
+    padding: .5rem .5rem 0.25rem;
     grid-area: footer;
     font-size: 0.8rem;
     text-align: center;
+
+    @include xl {
+      display: none;
+    }
   }
 }
 
 .Drawer {
+  @include xl {
+    display: none;
+    // position: relative;
+  }
   position: absolute;
   grid-area: header;
   top: 0;
@@ -59,31 +110,53 @@
   background-color: red;
 }
 
+.SelfAvatarInput{
+  display: none;
+
+  @include xl{
+    display: inline-block;
+    border-radius: 50%;
+    width: 4rem;
+    height: 4rem;
+    position: absolute;
+    right: -0.5rem;
+    margin-top: .3rem;
+    border: solid #0b0501 4px;
+  }
+}
 .Triangle {
   margin: 0 2rem;
   border-right: 0.7rem solid transparent;
   border-bottom: 1.25rem solid #fff200;
   border-left: 0.7rem solid transparent;
-  transition: all 500ms ease-in;
+  transition: all 300ms ease-in;
 
   &__Down {
     @extend .Triangle;
     transform: rotate(-180deg);
-    transition: all 500ms ease-in;
+    transition: all 300ms ease-in;
   }
 }
 
 .Form {
-  background-color: #553719;
+  background-color: #573819;
   text-align: end;
   margin-top: 42px;
   padding: 0 1rem;
-
+  @include xl{
+    margin-top: 0;
+    background-color: initial;
+    text-align: initial;
+    padding: 0rem .5rem;
+  }
   & > div:first-child {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     background-color: #0b0501;
     padding: 0.5rem;
+          @include xl{
+            background-color: #3a271d ;
+          }
   }
 }
 
@@ -91,6 +164,10 @@
   width: 100%;
   padding: 1rem;
   height: 10rem;
+
+  @include xl{
+    height: 15rem;
+  }
 }
 
 .SendButton {
@@ -106,6 +183,9 @@
 .Gutter {
   border-radius: 0 0 5px 5px;
   background-color: #0b0501;
+  @include xl{
+    background-color: #3a271d
+  }
   height: 0.5rem;
   padding: 0 1rem;
   margin: 0.2rem 0;
