--- a/front/src/sections/TheTavern/Thread/Posts/Post/Post.module.scss
+++ b/front/src/sections/TheTavern/Thread/Posts/Post/Post.module.scss
@@ -1,13 +1,16 @@
-// @import '../../../../../assets/scss/variables'
+@import '../../../../../assets/scss/variables';
 
 .Container {
-  position: relative;
+    position: relative;
 }
 
 .AbsoluteAuthor {
-  position: absolute;
-  top: -0.7rem;
-  right: 0.6rem;
+    position: absolute;
+    top: -0.7rem;
+    right: 0.6rem;
+    @include md{
+        right: 1.3rem;
+    }
 }
 
 .Post {
@@ -28,6 +31,7 @@
 }
 
 .AbsoluteAddContact {
+  cursor: pointer;
   position: absolute;
   top: -0.1rem;
   right: -0.2rem;
@@ -35,6 +39,10 @@
   background-color: #03c9a5;
   width: 1.2rem;
   border-radius: 20%;
+  @include md{
+      width: 1.1rem;
+      padding: 0.1rem;
+  }
 }
 
 .AddButton {
@@ -43,83 +51,100 @@
   display: block;
   margin: auto;
   font-size: 0.8rem;
+  @include md{
+      font-size: 1rem;
+  }
 }
 
 .AuthorAvatar {
-  background-color: #fff;
-  border-radius: 50%;
-  border: solid 4px #0b0501;
-  width: 2.4rem;
-  top: -0.5rem;
-  right: -0.8rem;
+    background-color: #fff;
+    border-radius: 50%;
+    border: solid 4px #0b0501;
+    width: 2.4rem;
+    @include md{
+        width: 3rem;
+    }
 }
 
 .AuthorPost {
-  color: #fff;
-  text-align: right;
-  margin-right: 1rem;
-  font-family: 'nunito sans', nunito;
-  padding: 0.3rem 1rem 0.3rem 0.3rem;
-
-  &_gold {
-    color: #fff200;
+    color: #fff;
     text-align: right;
-    font-family: 'nunito sans', nunito;
     margin-right: 1rem;
+    font-family: 'nunito sans', nunito;
     padding: 0.3rem 1rem 0.3rem 0.3rem;
-  }
+    @include xl{
+        margin-right: 2rem;
+    }
+    &_gold {
+        color: #fff200;
+        text-align: right;
+        font-family: 'nunito sans', nunito;
+        margin-right: 1rem;
+        padding: 0.3rem 1rem 0.3rem 0.3rem;
+        @include xl{
+            margin-right: 2rem;
+        }
+    }
 }
 
 .ContentPost {
-  background-color: #0b0501;
-  border-radius: 5px;
-  color: #fff;
-  width: 95%;
-  height: fit-content;
-  margin: 0 auto;
-  padding: 1rem;
-  font-family: 'nunito sans', nunito;
-  word-wrap: break-word;
+    background-color: #0b0501;
+    border-radius: 5px;
+    color: #fff;
+    width: 95%;
+    height: fit-content;
+    margin: 0 auto;
+    padding: 1rem;
+    font-family: 'nunito sans', nunito;
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;   /* Internet Explorer 5.5+ */
 }
 
 .PostFooter {
-  &_start {
-    color: #fff;
-    padding: 0.7rem;
-    font-size: 0.8em;
-    display: flex;
-    justify-content: flex-start;
-    border: 1px solid rgba(242, 173, 0, 0.603);
-    width: 95%;
-    border-radius: 3px;
-    margin: 0.3rem auto;
-    margin-bottom: 0.6rem;
-  }
+    &_start {
+        color: #fff;
+        padding: 0.7rem;
+        font-size: 0.8em;
+        display: flex;
+        justify-content: flex-start;
+        border: 1px solid rgba(242, 173, 0, 0.603);
+        width: 95%;
+        border-radius: 3px;
+        margin: 0.3rem auto;
+        margin-bottom: 0.6rem;
+    }
 
-  &_between {
-    border-radius: 3px;
-    color: #fff;
-    padding: 0.4rem;
-    font-size: 0.8em;
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid rgba(242, 173, 0, 0.603);
-    width: 95%;
-    margin: 0.3rem auto;
-  }
+    &_between {
+        border-radius: 3px;
+        color: #fff;
+        padding: 0.4rem;
+        font-size: 0.8em;
+        display: flex;
+        justify-content: space-between;
+        border: 1px solid rgba(242, 173, 0, 0.603);
+        width: 95%;
+         margin: 0.3rem auto;
+            
+}
+    &_between svg {
+        cursor: pointer
+    }
 }
 
 .fa-trash {
-  color: red;
+    color: red;
 }
 
 .DeleteButton {
-  font-size: 1.1em;
+    font-size: 1.1em;
 }
 
 .DateContainer {
-  display: flex;
-  justify-content: space-between;
-  width: 35%;
-  // padding: 0 0.rem;
+    display: flex;
+    justify-content: space-between;
+    width: 35%;
+    // padding: 0 0.rem;
 }
