after resolve conflict thread

--- a/front/src/components/Layout/Layout.module.scss
+++ b/front/src/components/Layout/Layout.module.scss
@@ -32,7 +32,7 @@
   min-height: 100vh;
   grid-template-rows: fit-content(5rem) auto fit-content(5rem);
   grid-template-areas: 'header' 'main' 'footer';
-  font-family: 'nunito sans', nunito;
+  font-family: 'nunito sans', sans-serif;
   background-color: #0b0501;
   color: white;
   font-weight: 200;
