--- a/front/src/components/Layout/Layout.module.scss
+++ b/front/src/components/Layout/Layout.module.scss
@@ -1,74 +1,3 @@
-<<<<<<< HEAD
-@import '../../assets/scss/variables';
-
-.Auth {
-  display: grid;
-  grid-template-rows: fit-content(200px) auto fit-content(50px);
-  grid-template-areas: 'header' 'main' 'footer';
-  font-family: 'nunito sans', sans-serif;
-  font-weight: 200;
-  color: white;
-  min-height: 100vh;
-  margin: 0;
-  background-image: url('../../assets/images/backgroundlight.jpg');
-  background-repeat: no-repeat;
-  background-position: 48% 50%;
-  background-size: cover;
-  background-attachment: fixed;
-  padding: 1rem;
-
-  &__Logo {
-    grid-area: header;
-    width: 9rem;
-    z-index: 100;
-  }
-
-  &__Main {
-    grid-area: main;
-  }
-}
-
-.Main {
-  display: grid;
-  min-height: 100vh;
-  grid-template-rows: fit-content(5rem) auto fit-content(5rem);
-  grid-template-areas: 'header' 'main' 'footer';
-  font-family: 'nunito sans', sans-serif;
-  background-color: #0b0501;
-  color: white;
-  font-weight: 200;
-
-  @include xl{
-    display: flex;
-  }
-  
-  &__Main {
-    grid-area: main;
-    @include xl {
-      margin-left: 16rem;
-    }
-  }
-
-  &__Footer {
-    padding: 1rem;
-    grid-area: footer;
-    font-size: 0.8rem;
-    text-align: center;
-    @include xl {
-      position: fixed;
-      bottom: 0;
-      z-index: 3;
-    }
-  }
-}
-
-.Footer {
-  padding: 1rem 1rem 0;
-  grid-area: footer;
-  font-size: 0.8rem;
-  text-align: center;
-}
-=======
 @import '../../assets/scss/variables';
 
 .Auth {
@@ -99,12 +28,11 @@
     z-index: 200;
 
     @include xl {
-    max-width: 400px;
-    width: 15rem;
-    position: absolute;
-    left: 37%;
-    top: 29%;
-
+      max-width: 400px;
+      width: 15rem;
+      position: absolute;
+      left: 37%;
+      top: 29%;
     }
   }
 
@@ -117,16 +45,24 @@
   display: grid;
   min-height: 100vh;
   grid-template-rows: fit-content(5rem) auto fit-content(5rem);
+  grid-template-columns: 100%;
   grid-template-areas: 'header' 'main' 'footer';
-  font-family: 'nunito sans', nunito;
-  background-color: #0B0501;
+  font-family: 'nunito sans', sans;
+  background-color: #0b0501;
   color: white;
   font-weight: 200;
 
-  
+  @include lg {
+    grid-template-columns: 15% auto;
+    grid-template-areas: 'header main' 'header main' 'footer main';
+  }
 
   &__Main {
     grid-area: main;
+
+    @include lg {
+      padding: $gutter ($gutter * 2);
+    }
   }
 
   &__Footer {
@@ -135,9 +71,11 @@
     font-size: 0.8rem;
     text-align: center;
 
+    @include lg {
+      z-index: 200;
+    }
   }
 }
-
 
 .Footer {
   padding: 1rem 1rem 0;
@@ -149,8 +87,6 @@
     position: absolute;
     text-align: right;
     right: 0;
-    bottom: .5rem;
-    
+    bottom: 0.5rem;
   }
 }
->>>>>>> c238eae5f609ae8f51168f1ff3db768b92ff80c3
