--- a/front/src/sections/TheTavern/Thread/Invitation/Invitation.module.scss
+++ b/front/src/sections/TheTavern/Thread/Invitation/Invitation.module.scss
@@ -1,34 +1,29 @@
 @import '../../../../assets/scss/variables';
 
 .Invitation {
-  display: flex;
-  padding: 0.4rem 0.2rem 0.4rem 0.5rem;
+  @include flex(center, center, row wrap);
+  padding: 0.3rem;
   background-color: #3a271d;
   margin: 1rem 0.5rem;
 
-  &:nth-child(1){
+  &:nth-child(1) {
     margin-top: 0;
   }
 
-  @include xl{
+  @include xl {
     padding: 0.2rem;
   }
 }
 
 .Asking {
-  margin: 0 0 0 0.25rem;
+  @include flex(flex-start, space-around, column nowrap);
+  padding: 0.3rem;
   width: 100%;
 }
 
 .Request {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-}
-
-.Buttons {
-  display: flex;
-  justify-content: space-around;
+  @include flex(baseline, space-between, row wrap);
+  width: 100%;
 }
 
 .Name {
@@ -46,43 +41,31 @@
   border-radius: 50%;
   background-color: green;
 
-  @include md{
+  @include md {
     width: 10%;
   }
 
-  @include xl{
+  @include xl {
     height: 10%;
   }
 }
 
 .Buttons {
   @include flex(center, center, row wrap);
-  @include md {
-    @include flex(center, space-around, row wrap);
-  }
-  @include md{
-    width: 50%;
-  }
+  width: fit-content;
 }
 
 .Add {
   background-color: #04dab4;
   color: #fff;
   border: solid #04dab4 1px;
-  border-radius: 1.5px;
-  font-size: 0.8em;
-  margin: 0.2rem;
-  width: 4rem;
-  @include md{
-    width: 40%;
-    height: 2rem;
-    font-size: 1.5em;
-  }
+  border-radius: 2px;
+  font-size: 0.9em;
+  width: fit-content;
+  padding: 0.3rem;
 
-  @include xl{
-    height: 1.5rem;
-    font-size: 1em;
-    margin: 0;
+  @include md {
+    font-size: 0.9em;
   }
 }
 
@@ -90,4 +73,13 @@
   @extend .Add;
   background-color: #d92626;
   border: solid #d92626 1px;
+  margin-left: $gutter/2;
+
+  @include md {
+    margin-left: $gutter/4;
+  }
+
+  @include lg {
+    margin-left: $gutter/2;
+  }
 }
