--- a/front/src/sections/TheTavern/Thread/Posts/Post/Post.module.scss
+++ b/front/src/sections/TheTavern/Thread/Posts/Post/Post.module.scss
@@ -1,33 +1,33 @@
 @import '../../../../../assets/scss/variables';
 
 .Container {
-    position: relative;
+  position: relative;
+  margin: 0 auto $gutter/2;
+  width: 90%;
+
+  @include md {
+    width: 100%;
+  }
 }
 
 .AbsoluteAuthor {
-    position: absolute;
-    top: -0.7rem;
-    right: 0.6rem;
-    @include md{
-        right: 1.3rem;
-    }
+  position: absolute;
+  top: -0.7rem;
+  right: -0.5rem;
 }
 
 .Post {
   background-color: #3a271d;
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
-  width: 90%;
   border-radius: 0 0 5px 5px;
 }
 
 .Gutter {
-  width: 90%;
   border-radius: 5px 5px 0px 0px;
   background-color: #3a271d;
   height: 0.3rem;
-  margin: 1rem auto 0.15rem;
+  margin: 0 0 0.15rem;
 }
 
 .AbsoluteAddContact {
@@ -39,9 +39,9 @@
   background-color: #03c9a5;
   width: 1.2rem;
   border-radius: 20%;
-  @include md{
-      width: 1.1rem;
-      padding: 0.1rem;
+  @include md {
+    width: 1.1rem;
+    padding: 0.1rem;
   }
 }
 
@@ -51,109 +51,106 @@
   display: block;
   margin: auto;
   font-size: 0.8rem;
-  @include md{
-      font-size: 1rem;
+  @include md {
+    font-size: 1rem;
   }
 }
 
 .AuthorAvatar {
-    background-color: #fff;
-    border-radius: 50%;
-    border: solid 4px #0b0501;
-    width: 2.4rem;
-    @include md{
-        width: 3rem;
-    }
+  background-color: #fff;
+  border-radius: 50%;
+  border: solid 4px #0b0501;
+  width: 2.4rem;
+  @include md {
+    width: 3rem;
+  }
 }
 
 .AuthorPost {
-    color: #fff;
+  color: #fff;
+  text-align: right;
+  margin-right: 1rem;
+  font-family: 'nunito sans', nunito;
+  padding: 0.3rem 1rem 0.3rem 0.3rem;
+
+  @include md {
+    margin-right: 2rem;
+  }
+
+  &_gold {
+    color: #fff200;
     text-align: right;
-    margin-right: 1rem;
     font-family: 'nunito sans', nunito;
+    margin-right: 1rem;
     padding: 0.3rem 1rem 0.3rem 0.3rem;
-    @include xl{
-        margin-right: 2rem;
+    @include md {
+      margin-right: 2rem;
     }
-    &_gold {
-        color: #fff200;
-        text-align: right;
-        font-family: 'nunito sans', nunito;
-        margin-right: 1rem;
-        padding: 0.3rem 1rem 0.3rem 0.3rem;
-        @include xl{
-            margin-right: 2rem;
-        }
-    }
+  }
 }
 
 .ContentPost {
-    background-color: #0b0501;
-    border-radius: 5px;
-    color: #fff;
-    width: 95%;
-    height: fit-content;
-    margin: 0 auto;
-    padding: 1rem;
-    font-family: 'nunito sans', sans-serif;
-    white-space: pre-wrap;       /* Since CSS 2.1 */
-    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-    white-space: -pre-wrap;      /* Opera 4-6 */
-    white-space: -o-pre-wrap;    /* Opera 7 */
-    word-wrap: break-word;   /* Internet Explorer 5.5+ */
-
-
-
-
-
-  
-
+  background-color: #0b0501;
+  border-radius: 5px;
+  color: #fff;
+  width: 95%;
+  height: fit-content;
+  margin: 0 auto;
+  padding: 1rem;
+  font-family: 'nunito sans', sans-serif;
+  white-space: pre-wrap; /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 .DateContainer {
   word-wrap: break-word;
+  @include xl {
+    font-size: 0.8em;
+  }
 }
 
 .PostFooter {
-    &_start {
-        color: #fff;
-        padding: 0.7rem;
-        font-size: 0.8em;
-        display: flex;
-        justify-content: flex-start;
-        border: 1px solid rgba(242, 173, 0, 0.603);
-        width: 95%;
-        border-radius: 3px;
-        margin: 0.3rem auto;
-        margin-bottom: 0.6rem;
-    }
+  &_start {
+    color: #fff;
+    padding: 0.7rem;
+    font-size: 0.8em;
+    display: flex;
+    justify-content: flex-start;
+    border: 1px solid rgba(242, 173, 0, 0.603);
+    width: 95%;
+    border-radius: 3px;
+    margin: 0.3rem auto;
+    margin-bottom: 0.6rem;
+  }
 
-    &_between {
-        border-radius: 3px;
-        color: #fff;
-        padding: 0.4rem;
-        font-size: 0.8em;
-        display: flex;
-        justify-content: space-between;
-        border: 1px solid rgba(242, 173, 0, 0.603);
-        width: 95%;
-        margin: 0.3rem auto;
-            
-}
-    &_between svg {
-        cursor: pointer
-    }
+  &_between {
+    border-radius: 3px;
+    color: #fff;
+    padding: 0.4rem;
+    font-size: 0.8em;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid rgba(242, 173, 0, 0.603);
+    width: 95%;
+    margin: 0.3rem auto;
+  }
+  &_between svg {
+    cursor: pointer;
+  }
 }
 
 .fa-trash {
-    color: red;
+  color: red;
 }
 
 .DeleteButton {
-    font-size: 1.1em;
+  font-size: 1.1em;
 }
 
 .DateContainer {
-    display: flex;
-    justify-content: space-between;
-    width: 35%;
+  display: flex;
+  justify-content: space-between;
+  width: 35%;
 }
