--- a/front/src/sections/TheTavern/Thread/Thread.module.scss
+++ b/front/src/sections/TheTavern/Thread/Thread.module.scss
@@ -1,27 +1,62 @@
 @import '../../../assets/scss/variables';
 
-
 .Thread {
+  @include flex(stretch, center, row wrap);
   background-color: #0b0501;
   height: 100%;
-  max-width: 100vw;
-  @include xl{
-    // position: absolute;
-    // left: 20%;
-    margin-left: 24.5%;
-    width: 98%;
-    margin-top: 10%;
-    height: auto;
-    position: relative;
-    z-index: 1;
-    display: flex;
+  width: 100%;
+  margin-top: 2rem;
+
+  @include lg {
+    justify-content: flex-start;
+    margin-top: 0;
+  }
+
+  &__Welcome {
+    display: none;
+
+    @include lg {
+      display: block;
+      width: 100%;
+      font-weight: 700;
+      padding-bottom: $gutter/2;
+    }
+
+    h1 {
+      @include xl {
+        font-size: 1.8em;
+      }
+    }
+
+    h2 {
+      color: $gold;
+      font-size: 1.4rem;
+
+      @include xl {
+        font-size: 1.8em;
+      }
+    }
+  }
+
+  & > section {
+    max-width: 50rem;
+    width: 100%;
+    margin: 0 1rem;
+
+    @include md {
+      width: 50%;
+    }
+
+    @include lg {
+      margin-left: 0;
+    }
   }
 }
 
-.Invitation {
-  position: fixed;
-  top: 61vh;
-  left: 4.5%;
-  width: 91%;
-  overflow-y: scroll;
-}
+// .Invitation {
+//   position: fixed;
+//   top: 61vh;
+//   left: 4.5%;
+//   width: 91%;
+//   overflow-y: scroll;
+// }
