--- a/front/src/sections/TheTavern/components/Nav/Nav.module.scss
+++ b/front/src/sections/TheTavern/components/Nav/Nav.module.scss
@@ -1,96 +1,82 @@
 @import '../../../../assets/scss/variables';
 
-.Welcome {
-  margin-top: $gutter + 1.6;
-  margin-left: $gutter + 2.5;
-  position: absolute;
-  font-weight: 700;
-
-  @include xl{
-    position: absolute;
-    left: 18rem;
-    top: 5%;
-    margin: 0;
-  }
-
-  &__User {
-    color: $gold;
-    font-size: 1.4rem;
-    @include xl{
-      font-size: 1.8em;
-    }
-  }
-}
-.Welcome h1{
-  @include xl {
-    font-size: 1.8em;
-  }
-}
-
 .Nav {
   @include flex(center, space-between, row wrap);
   padding: $gutter / 3;
   position: relative;
   overflow-x: hidden;
 
-  @include xl{
+  @include lg {
     justify-content: flex-start;
-    overflow-x: initial;
     flex-direction: column;
-    height: 50%;
     align-items: flex-start;
     width: 65%;
-    margin: 10% auto 0;
-    height: 85%;
+    margin: 2rem auto 0;
+    height: 100%;
   }
 
   &__Header {
     grid-area: header;
-    @include xl{
+
+    @include lg {
       position: fixed;
       z-index: 1;
       height: 100vh;
-      grid-area : none;
-      width: 16rem;
+      grid-area: none;
+      width: 15%;
       background-image: url('../../../../assets/images/backgroundlight.jpg');
       background-repeat: no-repeat;
-      background-position-x: -4rem;;
-      background-size: cover;;
-      border-right: solid #DCAA84 0.5rem;
+      background-position: center;
+      background-size: cover;
+      border-right: solid #dcaa84 0.5rem;
+    }
+
+    &__Welcome {
+      margin-top: $gutter + 1.6;
+      margin-left: $gutter + 2.5;
+      position: absolute;
+      font-weight: 700;
+
+      @include lg {
+        display: none;
+      }
+
+      &__User {
+        color: $gold;
+        font-size: 1.4rem;
+
+        @include xl {
+          font-size: 1.8em;
+        }
+      }
+
+      h1 {
+        @include xl {
+          font-size: 1.8em;
+        }
+      }
     }
   }
 
   &__Logo {
     grid-area: header;
     width: $gutter * 3;
-    @include xl {
+
+    @include lg {
       width: 100%;
+      max-width: 8rem;
     }
 
     img {
       width: 50%;
-      @include xl{
+
+      @include lg {
         width: 100%;
       }
     }
   }
 
   &__Menu {
-    &__Container {
-      position: absolute;
-      top: 0;
-      right: 0;
-      @include xl{
-        font-size: 1.25em;
-        position: relative;
-        margin-top: 1rem;
-      }
-    }
-    
-    @include xl {
-      display: none;
-    }
-
     @include flex(center, center, row wrap);
     position: absolute;
     top: -1.1rem;
@@ -103,16 +89,27 @@
     transition: 300ms ease-in-out;
     z-index: 10;
 
-    
+    @include lg {
+      display: none;
+    }
+
+    &__Container {
+      position: absolute;
+      top: 0;
+      right: 0;
+
+      @include lg {
+        font-size: 1.1em;
+        position: relative;
+        height: 70%;
+        width: 100%;
+      }
+    }
 
     &__Open {
       @extend .Nav__Menu;
       transform: scale(1.05);
     }
-
-    // img {
-    //   width: 56%;
-    // }
   }
 }
 
