--- a/front/src/sections/TheTavern/Thread/Posts/Post/Post.module.scss
+++ b/front/src/sections/TheTavern/Thread/Posts/Post/Post.module.scss
@@ -17,6 +17,7 @@
 }
 
 .Post {
+  background-image: url('../../../../../assets/images/img-noise.png');
   background-color: #3a271d;
   display: flex;
   flex-direction: column;
@@ -24,6 +25,7 @@
 }
 
 .Gutter {
+  background-image: url('../../../../../assets/images/img-noise.png');
   border-radius: 5px 5px 0px 0px;
   background-color: #3a271d;
   height: 0.3rem;
