--- a/front/src/sections/TheTavern/components/Nav/Nav.module.scss
+++ b/front/src/sections/TheTavern/components/Nav/Nav.module.scss
@@ -7,6 +7,7 @@
   overflow-x: hidden;
 
   @include lg {
+    padding: 0;
     justify-content: flex-start;
     flex-direction: column;
     align-items: flex-start;
@@ -23,10 +24,10 @@
       z-index: 1;
       height: 100vh;
       grid-area: none;
-      width: 15%;
+      width: 18rem;
       background-image: url('../../../../assets/images/backgroundlight.jpg');
       background-repeat: no-repeat;
-      background-position: center;
+      background-position: -18rem;
       background-size: cover;
       border-right: solid #dcaa84 0.5rem;
     }
