--- a/front/src/sections/TheTavern/Tavern/ScreenShare/ScreenShare.module.scss
+++ b/front/src/sections/TheTavern/Tavern/ScreenShare/ScreenShare.module.scss
@@ -6,8 +6,23 @@
 
   min-height: 12rem;
 
-  max-width: 50rem;
+  max-width: 75rem;
   z-index: 10;
   position: relative;
 
+  &__TavernExit {
+    cursor: pointer;
+    position: absolute;
+    right: 0.5rem;
+    top: 0.5rem;
+    color: rgb(255, 255, 255);
+    text-shadow: 1px 1px 2px black;
+    font-weight: 200;
+    font-size: 0.8em;
+    z-index: 100;
+
+    img {
+      width: 2rem;
+    }
+  }
 }
