--- a/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
+++ b/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
@@ -5,6 +5,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  margin-top: 1.1rem;
   top: 15vh;
   background-color: #553719;
   transform: translate(0, calc(100% - 42px));
@@ -13,6 +14,7 @@
   transition: all 300ms ease-in;
 
   @include md {
+    margin-top: 1.8rem;
     top: 0;
     position: relative;
     transform: none;
@@ -49,7 +51,7 @@
     height: 45%;
 
     @include md {
-      height: fit-content;
+      height: 12rem;
       margin-top: 2rem;
       scroll-behavior: smooth;
       scrollbar-width: thin;
@@ -124,7 +126,7 @@
     height: 4rem;
     position: absolute;
     right: -0.5rem;
-    margin-top: 0.3rem;
+    margin-top: -1.8rem;
     border: solid #0b0501 4px;
   }
 }
@@ -161,6 +163,7 @@
     padding: 0.5rem;
 
     @include md {
+      background-image: url('../../../../assets/images/img-noise.png');
       background-color: #3a271d;
     }
   }
@@ -177,20 +180,28 @@
 }
 
 .SendButton {
+  @include flex(center, center, row nowrap);
   background-color: #f2af0d;
   color: #fff;
   width: fit-content;
   margin-top: 0.4rem;
-  height: 1.75rem;
-  border-radius: 1.5px;
+  height: 2.3rem;
+  border-radius: 4px;
   border: solid #f2af0d 1px;
+
+  &__Fire {
+    width: 1rem;
+    margin-right: 0.3rem;
+  }
 }
+
 
 .Gutter {
   border-radius: 0 0 5px 5px;
   background-color: #0b0501;
 
   @include md {
+    background-image: url('../../../../assets/images/img-noise.png');
     background-color: #3a271d;
   }
   height: 0.5rem;
