--- a/front/src/sections/TheTavern/Thread/Search/Search.module.scss
+++ b/front/src/sections/TheTavern/Thread/Search/Search.module.scss
@@ -5,28 +5,41 @@
   align-items: center;
   justify-content: space-between;
   margin: 0 0.5rem;
+  background-image: url('../../../../assets/images/img-noise.png');
   background-color: #3a271d;
   padding: 1rem;
 
   @include xl{
+    border-radius: 0 0 0.5rem 0.5rem;
+    padding-bottom: 1.3rem;
     border-top: solid #0b0501 5px;
   }
 }
 
 .Button{
-    color: #fff;
+    @include flex(center, center, row nowrap);
     background-color: #33CCAF;
-    border: solid #33CCAF 1px;
+    color: #fff;
+    width: fit-content;
+    margin-top: 0.4rem;
+    height: 2.3rem;
+    border-radius: 4px;
     border-radius: 0.2rem;
-    width: 40%;
-    height: 100%;
-    font-size: 1.1em;
+    border: solid #33CCAF 1px;
     @include md{
-        font-size: 1.5em;
+        font-size: 1em;
+        margin-left: -0.4rem;
     }
 }
 
 .Input{
     height: 100%;
-    width: 55%;
+    width: 70%;
+    margin-left: 1rem;
+    padding-top: 1rem;
+    @include md{
+      margin-top: 0.4rem;
+      padding-top: 1rem;
+      width: 80%;;
+  }
 }
