--- a/front/src/sections/TheTavern/components/Nav/Nav.module.scss
+++ b/front/src/sections/TheTavern/components/Nav/Nav.module.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: flex-start;
     width: 65%;
-    margin: 2rem auto 0;
+    margin: 2rem 3.5rem 0;
     height: 100%;
   }
 
@@ -24,7 +24,7 @@
       z-index: 1;
       height: 100vh;
       grid-area: none;
-      width: 18rem;
+      width: 16rem;
       background-image: url('../../../../assets/images/backgroundlight.jpg');
       background-repeat: no-repeat;
       background-position: -18rem;
