--- a/front/src/sections/Auth/Signup/Signup.module.scss
+++ b/front/src/sections/Auth/Signup/Signup.module.scss
@@ -112,8 +112,18 @@
     font-weight: normal;
     line-height: 1.5;
     align-self: flex-end;
-    background-color: #03c9a5;
+    transition: 0.5s;
+    background-position: 0 0;
+    background-size: 300% auto;
+    background-image: linear-gradient(to right, #4AC29A 0%, rgb(131, 245, 224) 51%, #4AC29A 100%);
+    //background-color: #03c9a5;
     color: white;
+
+    &:hover,
+    &:active
+     {
+      background-position: 70%;
+    }
 
     &__Scroll {
       width: 1.6rem;
